# FEMsolid

./: .gitignore  CMakeLists.txt  ProjectSolid.sln  README.md  main.cpp
ProjectSolid/: FEMSolid.h  ProjectSolid.vcxproj  ProjectSolid.vcxproj.filters  SolidInc.h  main.cpp  tet.cpp  tet.h
ProjectSolid/include/: FEMSolid.h  poly.hpp
ProjectSolid/lib/: tet.lib  tetd.lib
ProjectSolid/resultcache/: output.poly
ProjectSolid/src/: FEMSolid.cpp  main.cpp  tet.cpp  tetraDebugger.cpp  tetrahedralizeCube.cpp  tetrahedralizeObj.cpp
ProjectSolid/x64/Debug/: Solver.cu.cache  Solver.cu1864988595.deps  vc140.idb
ProjectSolid/x64/Debug/ProjectSolid.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ProjectSolid.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: ProjectSolid.ilk
